Fix sign up section content alignment

--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ body {
     min-width: 60%;
     background-color: #3882F6;
     border-radius: 8px;
-    padding: 24px 8px;
+    padding: 36px 8px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -193,13 +193,13 @@ body {
     font-size: 24px;
     font-weight: 900;
     color: #F9FAF8;
-    margin-bottom: 0;
+    margin: 0;
 }
 
 #sign-up-subtext {
     font-weight: 100;
     color:#F9FAF8;
-    margin-top: 0;
+    margin: 0;
 }
 
 /* Footer */
